--- a/hakkinda.html
+++ b/hakkinda.html
@@ -6,11 +6,13 @@
     <title>Hakkında - Adalet GYS Portalı</title>
 
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
+    <!-- Template Loader -->
     <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 </head>
 
 <body data-needs-template="page">
     <main id="app-container" class="container page-content">
+        <!-- HAKKINDA SAYFASI İÇERİĞİ -->
         <div class="card p-8 md:p-12">
             <div class="text-center mb-12">
                 <h1 class="text-3xl md:text-4xl font-bold text-slate-800 mb-4">Hakkımızda</h1>
@@ -20,10 +22,11 @@
             </div>
 
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <!-- Misyon Kartı -->
                 <div class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col">
                     <div class="mb-4 flex justify-center">
                         <div class="bg-teal-100 p-3 rounded-full inline-flex items-center justify-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-teal-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-teal-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
                             </svg>
                         </div>
@@ -34,10 +37,11 @@
                     </p>
                 </div>
 
+                <!-- Teknoloji Kartı -->
                 <div class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col">
                     <div class="mb-4 flex justify-center">
                         <div class="bg-amber-100 p-3 rounded-full inline-flex items-center justify-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-amber-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-amber-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
                             </svg>
                         </div>
@@ -63,10 +67,11 @@
                     </ul>
                 </div>
 
+                <!-- Gelecek Kartı -->
                 <div class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col">
                     <div class="mb-4 flex justify-center">
                         <div class="bg-blue-100 p-3 rounded-full inline-flex items-center justify-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
                             </svg>
                         </div>
@@ -93,10 +98,12 @@
                 </div>
             </div>
 
+            <!-- Vizyon ve Katkı Kartı -->
             <div class="mt-12 grid md:grid-cols-2 gap-8">
+                <!-- Vizyon -->
                 <div class="category-card bg-white p-6 rounded-lg border shadow-sm">
                     <h2 class="text-xl font-semibold text-slate-800 mb-4 flex items-center justify-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-amber-500 mr-2" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-amber-500 mr-2" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd" />
                         </svg>
                         Vizyonumuz
@@ -106,9 +113,10 @@
                     </p>
                 </div>
 
+                <!-- Katkı -->
                 <div class="category-card bg-white p-6 rounded-lg border shadow-sm">
                     <h2 class="text-xl font-semibold text-slate-800 mb-4 flex items-center justify-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-teal-500 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-teal-500 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
                         </svg>
                         Katkıda Bulunun!
@@ -119,10 +127,11 @@
                     <div class="text-center">
                          <a href="/adalet-gys-portal/iletisim.html" class="btn inline-block text-center">Bizimle İletişime Geçin</a>
                     </div>
-                    
+                   
                 </div>
             </div>
         </div>
-        </main>
+        <!-- HAKKINDA SAYFASI İÇERİĞİ SON -->
+    </main>
 </body>
 </html>
