--- a/hakkinda.html
+++ b/hakkinda.html
@@ -6,23 +6,20 @@
     <title>Hakkında - Adalet GYS Portalı</title>
 
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
-    <!-- Template Loader -->
     <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 </head>
 
 <body data-needs-template="page">
     <main id="app-container" class="container page-content">
-        <!-- HAKKINDA SAYFASI İÇERİĞİ -->
         <div class="card p-8 md:p-12">
             <div class="text-center mb-12">
                 <h1 class="text-3xl md:text-4xl font-bold text-slate-800 mb-4">Hakkımızda</h1>
                 <p class="text-lg md:text-xl text-slate-600 max-w-3xl mx-auto">
-                    Adalet GYS Portalı, adaylara en iyi hazırlık deneyimini sunmak amacıyla geliştirilmiş, modern web teknolojileriyle inşa edilmiş bir platformdur.
+                    Adalet GYS Portalı, adaylara en iyi hazırlık deneyimini sunmak amacıyla geliştirilmiş, modern web teknolojileriyle inşa edilmiş bir platformdur[cite: 1750].
                 </p>
             </div>
 
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Misyon Kartı -->
                 <div class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col">
                     <div class="mb-4 flex justify-center">
                         <div class="bg-teal-100 p-3 rounded-full inline-flex items-center justify-center">
@@ -33,11 +30,10 @@
                     </div>
                     <h2 class="text-xl font-semibold text-slate-800 mb-3 text-center">Misyonumuz</h2>
                     <p class="text-slate-600 flex-grow">
-                        Adalet Bakanlığı Görevde Yükselme Sınavı'na hazırlanan adaylar için kapsamlı, güncel ve etkili bir çalışma ortamı sunmak. Amacımız, adayların sınavda başarılı olmalarına yardımcı olacak nitelikli kaynaklara, interaktif testlere ve deneme sınavlarına kolay erişim sağlamaktır.
+                        Adalet Bakanlığı Görevde Yükselme Sınavı'na hazırlanan adaylar için kapsamlı, güncel ve etkili bir çalışma ortamı sunmak[cite: 1755]. Amacımız, adayların sınavda başarılı olmalarına yardımcı olacak nitelikli kaynaklara, interaktif testlere ve deneme sınavlarına kolay erişim sağlamaktır[cite: 1755, 1756].
                     </p>
                 </div>
 
-                <!-- Teknoloji Kartı -->
                 <div class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col">
                     <div class="mb-4 flex justify-center">
                         <div class="bg-amber-100 p-3 rounded-full inline-flex items-center justify-center">
@@ -50,24 +46,23 @@
                     <ul class="text-slate-600 space-y-2 flex-grow">
                         <li class="flex items-start">
                             <span class="text-teal-500 mr-2">•</span>
-                            <span><strong>HTML5 & CSS3:</strong> Modern ve duyarlı arayüz.</span>
+                            <span><strong>HTML5 & CSS3:</strong> Modern ve duyarlı arayüz. [cite: 1717]</span>
                         </li>
                         <li class="flex items-start">
                             <span class="text-teal-500 mr-2">•</span>
-                            <span><strong>JavaScript (ES6+):</strong> Dinamik sınav motoru.</span>
+                            <span><strong>JavaScript (ES6+):</strong> Dinamik sınav motoru. [cite: 1719]</span>
                         </li>
                         <li class="flex items-start">
                             <span class="text-teal-500 mr-2">•</span>
-                            <span><strong>Tailwind CSS:</strong> Hızlı ve tutarlı stil.</span>
+                            <span><strong>Tailwind CSS:</strong> Hızlı ve tutarlı stil. [cite: 1720]</span>
                         </li>
                         <li class="flex items-start">
                             <span class="text-teal-500 mr-2">•</span>
-                            <span><strong>Google E-Tablolar:</strong> Kolay içerik yönetimi.</span>
+                            <span><strong>Google E-Tablolar:</strong> Kolay içerik yönetimi. [cite: 1722]</span>
                         </li>
                     </ul>
                 </div>
 
-                <!-- Gelecek Kartı -->
                 <div class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col">
                     <div class="mb-4 flex justify-center">
                         <div class="bg-blue-100 p-3 rounded-full inline-flex items-center justify-center">
@@ -80,27 +75,25 @@
                     <ul class="text-slate-600 space-y-2 flex-grow">
                         <li class="flex items-start">
                             <span class="text-teal-500 mr-2">•</span>
-                            <span>Branşlara özel içerikler.</span>
+                            <span>Branşlara özel içerikler. [cite: 1773]</span>
                         </li>
                         <li class="flex items-start">
                             <span class="text-teal-500 mr-2">•</span>
-                            <span>Daha fazla deneme sınavı.</span>
+                            <span>Daha fazla deneme sınavı. [cite: 1774]</span>
                         </li>
                         <li class="flex items-start">
                             <span class="text-teal-500 mr-2">•</span>
-                            <span>Performans analizi araçları.</span>
+                            <span>Performans analizi araçları. [cite: 1776]</span>
                         </li>
                         <li class="flex items-start">
                             <span class="text-teal-500 mr-2">•</span>
-                            <span>Mobil uyumlu uygulama.</span>
+                            <span>Mobil uyumlu uygulama. [cite: 1778]</span>
                         </li>
                     </ul>
                 </div>
             </div>
 
-            <!-- Vizyon ve Katkı Kartı -->
             <div class="mt-12 grid md:grid-cols-2 gap-8">
-                <!-- Vizyon -->
                 <div class="category-card bg-white p-6 rounded-lg border shadow-sm">
                     <h2 class="text-xl font-semibold text-slate-800 mb-4 flex items-center justify-center">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-amber-500 mr-2" viewBox="0 0 20 20" fill="currentColor">
@@ -109,11 +102,10 @@
                         Vizyonumuz
                     </h2>
                     <p class="text-slate-600 text-center">
-                        Türkiye'de kamu personeli sınavlarına hazırlanan bireyler için en güvenilir ve etkili dijital öğrenme ortamını oluşturmak. Eğitimde eşitlik ve erişilebilirliği artırmak.
+                        Türkiye'de kamu personeli sınavlarına hazırlanan bireyler için en güvenilir ve etkili dijital öğrenme ortamını oluşturmak[cite: 1739]. Eğitimde eşitlik ve erişilebilirliği artırmak[cite: 1739].
                     </p>
                 </div>
 
-                <!-- Katkı -->
                 <div class="category-card bg-white p-6 rounded-lg border shadow-sm">
                     <h2 class="text-xl font-semibold text-slate-800 mb-4 flex items-center justify-center">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-teal-500 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -122,16 +114,14 @@
                         Katkıda Bulunun!
                     </h2>
                     <p class="text-slate-600 mb-4 text-center">
-                        Bu projenin gelişmesine yardımcı olmak ister misiniz? Hataları bildirin, yeni özellikler önerin veya doğrudan katkıda bulunun.
+                        Bu projenin gelişmesine yardımcı olmak ister misiniz? [cite: 1788] Hataları bildirin, yeni özellikler önerin veya doğrudan katkıda bulunun[cite: 1788].
                     </p>
                     <div class="text-center">
                          <a href="/adalet-gys-portal/iletisim.html" class="btn inline-block text-center">Bizimle İletişime Geçin</a>
                     </div>
-                   
                 </div>
             </div>
         </div>
-        <!-- HAKKINDA SAYFASI İÇERİĞİ SON -->
-    </main>
+        </main>
 </body>
 </html>
