--- a/hakkinda.html
+++ b/hakkinda.html
@@ -15,7 +15,7 @@
             <div class="text-center mb-12">
                 <h1 class="text-3xl md:text-4xl font-bold text-slate-800 mb-4">Hakkımızda</h1>
                 <p class="text-lg md:text-xl text-slate-600 max-w-3xl mx-auto">
-                    Adalet GYS Portalı, adaylara en iyi hazırlık deneyimini sunmak amacıyla geliştirilmiş, modern web teknolojileriyle inşa edilmiş bir platformdur[cite: 1750].
+                    Adalet GYS Portalı, adaylara en iyi hazırlık deneyimini sunmak amacıyla geliştirilmiş, modern web teknolojileriyle inşa edilmiş bir platformdur.
                 </p>
             </div>
 
@@ -23,105 +23,51 @@
                 <div class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col">
                     <div class="mb-4 flex justify-center">
                         <div class="bg-teal-100 p-3 rounded-full inline-flex items-center justify-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-teal-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-teal-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
                             </svg>
                         </div>
                     </div>
                     <h2 class="text-xl font-semibold text-slate-800 mb-3 text-center">Misyonumuz</h2>
                     <p class="text-slate-600 flex-grow">
-                        Adalet Bakanlığı Görevde Yükselme Sınavı'na hazırlanan adaylar için kapsamlı, güncel ve etkili bir çalışma ortamı sunmak[cite: 1755]. Amacımız, adayların sınavda başarılı olmalarına yardımcı olacak nitelikli kaynaklara, interaktif testlere ve deneme sınavlarına kolay erişim sağlamaktır[cite: 1755, 1756].
+                        Adalet Bakanlığı Görevde Yükselme Sınavı'na hazırlanan adaylar için kapsamlı, güncel ve etkili bir çalışma ortamı sunmak.
                     </p>
                 </div>
 
                 <div class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col">
                     <div class="mb-4 flex justify-center">
                         <div class="bg-amber-100 p-3 rounded-full inline-flex items-center justify-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-amber-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-amber-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
                             </svg>
                         </div>
                     </div>
-                    <h2 class="text-xl font-semibold text-slate-800 mb-3 text-center">Kullanılan Teknolojiler</h2>
+                    <h2 class="text-xl font-semibold text-slate-800 mb-3 text-center">Teknolojiler</h2>
                     <ul class="text-slate-600 space-y-2 flex-grow">
-                        <li class="flex items-start">
-                            <span class="text-teal-500 mr-2">•</span>
-                            <span><strong>HTML5 & CSS3:</strong> Modern ve duyarlı arayüz. [cite: 1717]</span>
-                        </li>
-                        <li class="flex items-start">
-                            <span class="text-teal-500 mr-2">•</span>
-                            <span><strong>JavaScript (ES6+):</strong> Dinamik sınav motoru. [cite: 1719]</span>
-                        </li>
-                        <li class="flex items-start">
-                            <span class="text-teal-500 mr-2">•</span>
-                            <span><strong>Tailwind CSS:</strong> Hızlı ve tutarlı stil. [cite: 1720]</span>
-                        </li>
-                        <li class="flex items-start">
-                            <span class="text-teal-500 mr-2">•</span>
-                            <span><strong>Google E-Tablolar:</strong> Kolay içerik yönetimi. [cite: 1722]</span>
-                        </li>
+                        <li class="flex items-start"><span class="text-teal-500 mr-2">•</span><span><strong>JavaScript (ES6+)</strong></span></li>
+                        <li class="flex items-start"><span class="text-teal-500 mr-2">•</span><span><strong>Tailwind CSS</strong></span></li>
+                        <li class="flex items-start"><span class="text-teal-500 mr-2">•</span><span><strong>Google E-Tablolar</strong></span></li>
+                        <li class="flex items-start"><span class="text-teal-500 mr-2">•</span><span><strong>GitHub Pages</strong></span></li>
                     </ul>
                 </div>
 
                 <div class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col">
                     <div class="mb-4 flex justify-center">
                         <div class="bg-blue-100 p-3 rounded-full inline-flex items-center justify-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M13 10V3L4 14h7v7l9-11h-7z" />
                             </svg>
                         </div>
                     </div>
                     <h2 class="text-xl font-semibold text-slate-800 mb-3 text-center">Gelecek Planları</h2>
                     <ul class="text-slate-600 space-y-2 flex-grow">
-                        <li class="flex items-start">
-                            <span class="text-teal-500 mr-2">•</span>
-                            <span>Branşlara özel içerikler. [cite: 1773]</span>
-                        </li>
-                        <li class="flex items-start">
-                            <span class="text-teal-500 mr-2">•</span>
-                            <span>Daha fazla deneme sınavı. [cite: 1774]</span>
-                        </li>
-                        <li class="flex items-start">
-                            <span class="text-teal-500 mr-2">•</span>
-                            <span>Performans analizi araçları. [cite: 1776]</span>
-                        </li>
-                        <li class="flex items-start">
-                            <span class="text-teal-500 mr-2">•</span>
-                            <span>Mobil uyumlu uygulama. [cite: 1778]</span>
-                        </li>
+                        <li class="flex items-start"><span class="text-teal-500 mr-2">•</span><span>Branşlara özel içerikler</span></li>
+                        <li class="flex items-start"><span class="text-teal-500 mr-2">•</span><span>Daha fazla deneme sınavı</span></li>
+                        <li class="flex items-start"><span class="text-teal-500 mr-2">•</span><span>Performans analizi araçları</span></li>
                     </ul>
                 </div>
             </div>
-
-            <div class="mt-12 grid md:grid-cols-2 gap-8">
-                <div class="category-card bg-white p-6 rounded-lg border shadow-sm">
-                    <h2 class="text-xl font-semibold text-slate-800 mb-4 flex items-center justify-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-amber-500 mr-2" viewBox="0 0 20 20" fill="currentColor">
-                            <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd" />
-                        </svg>
-                        Vizyonumuz
-                    </h2>
-                    <p class="text-slate-600 text-center">
-                        Türkiye'de kamu personeli sınavlarına hazırlanan bireyler için en güvenilir ve etkili dijital öğrenme ortamını oluşturmak[cite: 1739]. Eğitimde eşitlik ve erişilebilirliği artırmak[cite: 1739].
-                    </p>
-                </div>
-
-                <div class="category-card bg-white p-6 rounded-lg border shadow-sm">
-                    <h2 class="text-xl font-semibold text-slate-800 mb-4 flex items-center justify-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-teal-500 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
-                        </svg>
-                        Katkıda Bulunun!
-                    </h2>
-                    <p class="text-slate-600 mb-4 text-center">
-                        Bu projenin gelişmesine yardımcı olmak ister misiniz? [cite: 1788] Hataları bildirin, yeni özellikler önerin veya doğrudan katkıda bulunun[cite: 1788].
-                    </p>
-                    <div class="text-center">
-                         <a href="/adalet-gys-portal/iletisim.html" class="btn inline-block text-center">Bizimle İletişime Geçin</a>
-                    </div>
-                </div>
-            </div>
         </div>
-        </main>
+    </main>
 </body>
 </html>
