--- a/hakkinda.html
+++ b/hakkinda.html
@@ -6,6 +6,7 @@
     <title>Hakkında - Adalet GYS Portalı</title>
 
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
+    
     <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 </head>
 
@@ -44,8 +45,8 @@
                     </div>
                     <h2 class="text-xl font-semibold text-slate-800 mb-3 text-center">Teknolojiler</h2>
                     <ul class="text-slate-600 space-y-2 flex-grow">
+                        <li class="flex items-start"><span class="text-teal-500 mr-2">•</span><span><strong>HTML5 & CSS3</strong></span></li>
                         <li class="flex items-start"><span class="text-teal-500 mr-2">•</span><span><strong>JavaScript (ES6+)</strong></span></li>
-                        <li class="flex items-start"><span class="text-teal-500 mr-2">•</span><span><strong>Tailwind CSS</strong></span></li>
                         <li class="flex items-start"><span class="text-teal-500 mr-2">•</span><span><strong>Google E-Tablolar</strong></span></li>
                         <li class="flex items-start"><span class="text-teal-500 mr-2">•</span><span><strong>GitHub Pages</strong></span></li>
                     </ul>
