--- a/hakkinda.html
+++ b/hakkinda.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hakkında - Adalet GYS Portalı</title>
 
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
-    
+
     <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 </head>
 
@@ -21,7 +23,7 @@
             </div>
 
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <div class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col">
+                <div class="bg-white p-6 rounded-lg border shadow-sm flex flex-col">
                     <div class="mb-4 flex justify-center">
                         <div class="bg-teal-100 p-3 rounded-full inline-flex items-center justify-center">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-teal-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
@@ -35,7 +37,7 @@
                     </p>
                 </div>
 
-                <div class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col">
+                <div class="bg-white p-6 rounded-lg border shadow-sm flex flex-col">
                     <div class="mb-4 flex justify-center">
                         <div class="bg-amber-100 p-3 rounded-full inline-flex items-center justify-center">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-amber-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
@@ -52,7 +54,7 @@
                     </ul>
                 </div>
 
-                <div class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col">
+                <div class="bg-white p-6 rounded-lg border shadow-sm flex flex-col">
                     <div class="mb-4 flex justify-center">
                         <div class="bg-blue-100 p-3 rounded-full inline-flex items-center justify-center">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
