--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 </head>
 
-<body data-needs-template="true">
+<body data-needs-template="page">
 
     <main class="container page-content">
         <section class="hero">
@@ -23,14 +23,12 @@
                 <h2>📘 Ortak Konular</h2>
                 <p>Tüm unvanlar için zorunlu olan %40'lık bölümün konu anlatımları ve testleri.</p>
                 <a href="/adalet-gys-portal/ortak-konular/" class="btn">Konuları İncele</a>
-                <a href="/adalet-gys-portal/testler/ortak-konular/" class="btn btn-secondary">Testleri Çöz</a>
             </div>
 
             <div class="category-card">
                 <h2>📙 Alan Konuları</h2>
                 <p>Yazı İşleri Müdürlüğü için özel olarak hazırlanmış %60'lık bölümün içerikleri.</p>
                  <a href="/adalet-gys-portal/alan-konulari/" class="btn">Konuları İncele</a>
-                 <a href="/adalet-gys-portal/testler/alan-konulari/" class="btn btn-secondary">Testleri Çöz</a>
             </div>
 
             <div class="category-card">
