--- a/hakkinda.html
+++ b/hakkinda.html
@@ -8,12 +8,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
-
+    
     <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 </head>
 
 <body data-needs-template="page">
-    <main id="app-container" class="container page-content">
+
+    <main class="container page-content">
         <div class="card p-8 md:p-12">
             <div class="text-center mb-12">
                 <h1 class="text-3xl md:text-4xl font-bold text-slate-800 mb-4">Hakkımızda</h1>
