--- a/index.html
+++ b/index.html
@@ -3,41 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adalet GYS Portalı - Ana Sayfa</title>
+    <title>Adalet GYS Portalı - Görevde Yükselme Sınavı Hazırlık Platformu</title>
     
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
-    
     <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 </head>
 
 <body data-needs-template="page">
-
     <main class="container page-content">
-        <section class="hero">
-            <h1>Görevde Yükselme Sınavı Hazırlık Platformu</h1>
-            <p class="subtitle">Yazı İşleri Müdürlüğü ve diğer unvanlar için güncel konu anlatımları, testler ve deneme sınavları ile hedefinize ulaşın.</p>
+        <section class="hero text-center bg-white p-8 md:p-12 rounded-lg shadow-lg mb-12">
+            <h1 class="text-4xl md:text-5xl font-bold text-slate-800 mb-4">Görevde Yükselme Sınavında Başarıya Ulaşın</h1>
+            <p class="subtitle text-lg md:text-xl max-w-3xl mx-auto">
+                Adalet Bakanlığı personeli için özel olarak hazırlanmış güncel deneme sınavları, konu testleri ve detaylı analizlerle kariyerinizde bir sonraki adımı atın.
+            </p>
+            <div class="mt-8">
+                <a href="/adalet-gys-portal/deneme-sinavlari/" class="btn text-lg px-8 py-3">Hemen Denemeye Başla</a>
+            </div>
+        </section>
+
+        <section class="grid md:grid-cols-3 gap-8 mb-12 text-center">
+            <div class="bg-white p-6 rounded-lg border">
+                <div class="bg-teal-100 p-3 rounded-full inline-flex items-center justify-center mb-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-teal-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M4 4v5h5V4H4zm0 9h5v5H4v-5zm9-9h5v5h-5V4zm0 9h5v5h-5v-5z" /></svg>
+                </div>
+                <h3 class="text-xl font-semibold text-slate-800 mb-2">Güncel Soru Bankası</h3>
+                <p class="text-slate-600">Mevzuattaki en son değişikliklere uygun, özenle hazırlanmış binlerce soru ile sınava tam hazır olun.</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg border">
+                <div class="bg-amber-100 p-3 rounded-full inline-flex items-center justify-center mb-4">
+                     <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-amber-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" /></svg>
+                </div>
+                <h3 class="text-xl font-semibold text-slate-800 mb-2">Gerçek Sınav Deneyimi</h3>
+                <p class="text-slate-600">Süre tutarak çözebileceğiniz denemelerle sınav atmosferini yaşayın ve zaman yönetimi becerinizi geliştirin.</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg border">
+                 <div class="bg-blue-100 p-3 rounded-full inline-flex items-center justify-center mb-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" /></svg>
+                </div>
+                <h3 class="text-xl font-semibold text-slate-800 mb-2">Detaylı Performans Analizi</h3>
+                <p class="text-slate-600">Sınav sonunda doğru, yanlış ve boş sayılarınızı görün. Yanlış yaptığınız soruların çözümlerini inceleyin.</p>
+            </div>
         </section>
 
         <section class="category-grid">
             <div class="category-card">
                 <h2>📘 Ortak Konular</h2>
-                <p>Tüm unvanlar için zorunlu olan %40'lık bölümün konu anlatımları ve testleri.</p>
+                <p>Tüm unvanlar için zorunlu olan %40'lık bölümün konu anlatımları ve güncel testleri.</p>
                 <a href="/adalet-gys-portal/ortak-konular/" class="btn">Konuları İncele</a>
             </div>
 
             <div class="category-card">
                 <h2>📙 Alan Konuları</h2>
-                <p>Yazı İşleri Müdürlüğü için özel olarak hazırlanmış %60'lık bölümün içerikleri.</p>
+                <p>Yazı İşleri Müdürlüğü ve diğer unvanlar için özel olarak hazırlanmış %60'lık bölümün içerikleri.</p>
                  <a href="/adalet-gys-portal/alan-konulari/" class="btn">Konuları İncele</a>
             </div>
 
             <div class="category-card">
                 <h2>⏱️ Deneme Sınavları</h2>
-                <p>Gerçek sınav formatında, süre tutarak kendinizi deneyin ve ilerlemenizi takip edin.</p>
+                <p>Gerçek sınav formatında tasarlanmış denemelerle ilerlemenizi ölçün ve eksiklerinizi tespit edin.</p>
                  <a href="/adalet-gys-portal/deneme-sinavlari/" class="btn">Denemelere Başla</a>
             </div>
         </section>
     </main>
-
 </body>
 </html>
