--- a/hakkinda.html
+++ b/hakkinda.html
@@ -6,70 +6,51 @@
     <title>Hakkında - Adalet GYS Portalı</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
-
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
-    
     <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 </head>
 
 <body data-needs-template="page">
-
     <main class="container page-content">
         <div class="card p-8 md:p-12">
             <div class="text-center mb-12">
-                <h1 class="text-3xl md:text-4xl font-bold text-slate-800 mb-4">Hakkımızda</h1>
+                <h1 class="text-3xl md:text-4xl font-bold text-slate-800 mb-4">Platformun Hikayesi</h1>
                 <p class="text-lg md:text-xl text-slate-600 max-w-3xl mx-auto">
-                    Adalet GYS Portalı, adaylara en iyi hazırlık deneyimini sunmak amacıyla geliştirilmiş, modern web teknolojileriyle inşa edilmiş bir platformdur.
+                    Adalet GYS Portalı, sınava hazırlık sürecindeki kaynak eksikliğini ve dağınıklığını gidermek amacıyla, modern teknolojiyi ve kullanıcı odaklı tasarımı bir araya getiren bir tutkunun ürünüdür.
                 </p>
             </div>
 
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <div class="bg-white p-6 rounded-lg border shadow-sm flex flex-col">
-                    <div class="mb-4 flex justify-center">
-                        <div class="bg-teal-100 p-3 rounded-full inline-flex items-center justify-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-teal-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
-                            </svg>
-                        </div>
-                    </div>
-                    <h2 class="text-xl font-semibold text-slate-800 mb-3 text-center">Misyonumuz</h2>
-                    <p class="text-slate-600 flex-grow">
-                        Adalet Bakanlığı Görevde Yükselme Sınavı'na hazırlanan adaylar için kapsamlı, güncel ve etkili bir çalışma ortamı sunmak.
+            <div class="grid md:grid-cols-2 gap-8">
+                <div class="bg-slate-50 p-6 rounded-lg border">
+                    <h2 class="text-2xl font-semibold text-slate-800 mb-3">Felsefemiz</h2>
+                    <p class="text-slate-600 mb-4">
+                        Başarının, doğru kaynaklara kolay ve hızlı erişimle mümkün olduğuna inanıyoruz. Bu platform, karmaşık bilgileri sadeleştirmek, en güncel içeriği sunmak ve adaylara gerçek bir sınav deneyimi yaşatmak üzerine kurulmuştur.
                     </p>
-                </div>
-
-                <div class="bg-white p-6 rounded-lg border shadow-sm flex flex-col">
-                    <div class="mb-4 flex justify-center">
-                        <div class="bg-amber-100 p-3 rounded-full inline-flex items-center justify-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-amber-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
-                            </svg>
-                        </div>
-                    </div>
-                    <h2 class="text-xl font-semibold text-slate-800 mb-3 text-center">Teknolojiler</h2>
-                    <ul class="text-slate-600 space-y-2 flex-grow">
-                        <li class="flex items-start"><span class="text-teal-500 mr-2">•</span><span><strong>HTML5 & CSS3</strong></span></li>
-                        <li class="flex items-start"><span class="text-teal-500 mr-2">•</span><span><strong>JavaScript (ES6+)</strong></span></li>
-                        <li class="flex items-start"><span class="text-teal-500 mr-2">•</span><span><strong>Google E-Tablolar</strong></span></li>
-                        <li class="flex items-start"><span class="text-teal-500 mr-2">•</span><span><strong>GitHub Pages</strong></span></li>
+                    <ul class="space-y-2">
+                        <li class="flex items-center"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-teal-500 mr-2" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" /></svg><span>Erişilebilirlik ve Kolay Kullanım</span></li>
+                        <li class="flex items-center"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-teal-500 mr-2" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" /></svg><span>Sürekli Güncel İçerik</span></li>
+                        <li class="flex items-center"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-teal-500 mr-2" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" /></svg><span>Kullanıcı Geri Bildirimlerine Değer Verme</span></li>
                     </ul>
                 </div>
-
-                <div class="bg-white p-6 rounded-lg border shadow-sm flex flex-col">
-                    <div class="mb-4 flex justify-center">
-                        <div class="bg-blue-100 p-3 rounded-full inline-flex items-center justify-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M13 10V3L4 14h7v7l9-11h-7z" />
-                            </svg>
-                        </div>
-                    </div>
-                    <h2 class="text-xl font-semibold text-slate-800 mb-3 text-center">Gelecek Planları</h2>
-                    <ul class="text-slate-600 space-y-2 flex-grow">
-                        <li class="flex items-start"><span class="text-teal-500 mr-2">•</span><span>Branşlara özel içerikler</span></li>
-                        <li class="flex items-start"><span class="text-teal-500 mr-2">•</span><span>Daha fazla deneme sınavı</span></li>
-                        <li class="flex items-start"><span class="text-teal-500 mr-2">•</span><span>Performans analizi araçları</span></li>
+                <div class="bg-slate-50 p-6 rounded-lg border">
+                    <h2 class="text-2xl font-semibold text-slate-800 mb-3">Gelecek Vizyonu</h2>
+                    <p class="text-slate-600 mb-4">
+                        Bu portal, yaşayan ve sürekli gelişen bir projedir. Hedefimiz, Türkiye'deki tüm görevde yükselme sınavları için en kapsamlı ve en çok tercih edilen hazırlık kaynağı olmaktır.
+                    </p>
+                    <ul class="space-y-2">
+                        <li class="flex items-start"><span class="text-amber-500 font-bold mr-2">→</span><span>Farklı unvanlar için yeni modüller eklemek.</span></li>
+                        <li class="flex items-start"><span class="text-amber-500 font-bold mr-2">→</span><span>Kişiselleştirilmiş çalışma planları sunmak.</span></li>
+                        <li class="flex items-start"><span class="text-amber-500 font-bold mr-2">→</span><span>Detaylı konu bazlı başarı istatistikleri sağlamak.</span></li>
                     </ul>
                 </div>
+            </div>
+            
+            <div class="text-center mt-12">
+                 <h2 class="text-2xl font-semibold text-slate-800 mb-4">Bize Katılın</h2>
+                 <p class="text-slate-600 mb-6 max-w-2xl mx-auto">
+                    Projenin gelişimine katkıda bulunmak, bir hatayı bildirmek veya sadece bir merhaba demek isterseniz, sizinle tanışmaktan mutluluk duyarız.
+                </p>
+                <a href="/adalet-gys-portal/iletisim.html" class="btn">İletişim Kurun</a>
             </div>
         </div>
     </main>
